* Made tabbing more robust, tabs may not always exist for every action
  so when the remembered tab isn't present, the default tab is selected. [Boy]
* Fixed cartesian product when searchcondition is missing in OneToMany. [Yury]
* Made atkEditHandler pass the proper module to atktext() when looking 
  for a tooltip. [Boy]
* Fixed DNS lookup feature of atkEmailAttribute. [Ivo]
- atkTextAttribute::value2db no longer does addslashes in Oracle 9/10. [Ivo]
- atkTextAttribute::db2value no longer does stripslashes on db data. [Ivo]

Changes in ATK 5.2.1
--------------------
+ When using the browser's cache outputflush() doesn't sent the page body
  anymore. [Martin]
+ Made PHP session cache limiter and cache expire configurable. [Martin]
+ Added preliminary CSV export handler (NF_EXPORT). [Ivo]
+ Added additional http/1.1 304 not modified header. Document lastmodified
  timestamp is compared to the client's if-modified-since header. [Martin]
+ atkAggregatedColumn::display() now supports $mode param. [Ivo]
+ Added Oracle demo installation file to the demo. [Ivo]
* Changed the addMlCondition so that is uses ATK_VARS["lng"] instead of a 
  global value $lng which isn't always set. [MartinL]
* Adding a multilanguage condition now takes into concideration the current
  language. Not just the default language. [MartinL]
* Fixed bug in multi-select search of atkManyToOneRelation. [Ivo]
* Missing db error translations no longer cause fatal error message. [Ivo]
* Fixed bug and cleaned up code in atkOneToManyRelation searching. [Ivo]
* atkTextAttribute's $size parameter detection is now a bit smarter. [Ivo]
* Fixed error in CSV import handler. [Boy]
* Default $config_sequenceprefix is now "seq_". (bug #365) [Ivo]
* Fixed fatal error in add screen when insert query would fail. [Ivo]
* Fixed bug where searching on dates would always add 19 or 20 
  in front of the year. [Boy]
* Fixed bug in exportFile() that would prevent exporting with MSIE and SSL. 
  [Boy]